--- a/UntitledFinanceTracker/App.xaml
+++ b/UntitledFinanceTracker/App.xaml
@@ -295,8 +295,8 @@
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type DataGridColumnHeader}">
-                        <Grid Background="{TemplateBinding Background}" Margin="5 0 0 0">
-                            <TextBlock FontFamily="Microsoft JhengHei" Text="{TemplateBinding Content}" VerticalAlignment="Center" />
+                        <Grid Background="{TemplateBinding Background}">
+                            <TextBlock FontFamily="Microsoft JhengHei" Text="{TemplateBinding Content}" Padding="5 0 0 0" VerticalAlignment="Center" />
                         </Grid>
                     </ControlTemplate>
                 </Setter.Value>
@@ -335,7 +335,7 @@
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type DataGridCell}">
-                        <Border Background="{TemplateBinding Background}" Padding="5 0 10 0">
+                        <Border Background="{TemplateBinding Background}" Padding="0 0 10 0">
                             <ContentPresenter VerticalAlignment="Center" HorizontalAlignment="Right"/>
                         </Border>
                     </ControlTemplate>
