--- a/UntitledFinanceTracker/App.xaml
+++ b/UntitledFinanceTracker/App.xaml
@@ -2,6 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:fa="http://schemas.fontawesome.io/icons/"
+             xmlns:ctrl="http://filterdatagrid.control.com/2021"
              xmlns:local="clr-namespace:UntitledFinanceTracker"
              StartupUri="MainWindow.xaml"
     xmlns:theme="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2">
@@ -253,7 +254,7 @@
             <Setter Property="Background" Value="#303030" />
             <Setter Property="VerticalContentAlignment" Value="Center" />
         </Style>
-
+        
         <!-- DataGrid formatting -->
         <Style TargetType="{x:Type DataGrid}">
             <Setter Property="RowHeight" Value="30" />
