--- a/UntitledFinanceTracker/Transactions.xaml
+++ b/UntitledFinanceTracker/Transactions.xaml
@@ -4,16 +4,18 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:UntitledFinanceTracker"
+             xmlns:ctrl="http://filterdatagrid.control.com/2021"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              Initialized="UserControl_Initialized">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="55" />
+            <RowDefinition Height="40" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <Border Background="#1A1A1A" Grid.ColumnSpan="2" Margin="10">
+        <Border Background="#1A1A1A" Grid.ColumnSpan="2" Margin="10 10 10 5">
             <TextBlock Style="{StaticResource Title}" Grid.Row="0" Margin="5 0 0 0">
                 Transactions
             </TextBlock>
@@ -21,8 +23,37 @@
         <Button Style="{StaticResource btnAdd}" x:Name="btnAdd" Click="BtnAdd_Click" VerticalAlignment="Stretch" Margin="15">
             Add Transaction
         </Button>
+        
+        <StackPanel Grid.Row="1" Orientation="Horizontal">
+            <ComboBox x:Name="cbYears" Template="{DynamicResource ComboBoxTemplate}" ItemsSource="{Binding}"
+                      Margin="10 0 5 5" Width="65" SelectionChanged="cbYears_SelectionChanged" />
+            <ComboBox x:Name="cbAccounts" Template="{DynamicResource ComboBoxTemplate}" ItemsSource="{Binding}"
+                      Margin="5 0 5 5" Width="70">
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <CheckBox IsChecked="{Binding Enabled}" Content="{Binding AccountName}" Foreground="#ffffff" Click="ChkAccount_Click" />
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
+            <ComboBox x:Name="cbCategories" Template="{DynamicResource ComboBoxTemplate}" ItemsSource="{Binding}"
+                      Margin="95 0 5 5" Width="90">
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <CheckBox IsChecked="{Binding Enabled}" Content="{Binding CategoryName}" Foreground="#ffffff" Click="ChkCategory_Click" />
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
+            <ComboBox x:Name="cbSubcategories" Template="{DynamicResource ComboBoxTemplate}" ItemsSource="{Binding}"
+                      Margin="5 0 5 5" Width="90">
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <CheckBox IsChecked="{Binding Enabled}" Content="{Binding CategoryName}" Foreground="#ffffff" Click="ChkSubcategory_Click" />
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
+        </StackPanel>
 
-        <DataGrid x:Name="dgTransactions" Grid.Row="1" ItemsSource="{Binding Transactions}">
+        <DataGrid x:Name="dgTransactions" Grid.Row="2" ItemsSource="{Binding Transactions}">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="ID" Width="40" Binding="{Binding TransactionID}" Visibility="Hidden" />
                 <DataGridTextColumn Header="Date" Width="70" Binding="{Binding Date, StringFormat=yyyy-MM-dd}" />
