--- a/UntitledFinanceTracker/App.xaml
+++ b/UntitledFinanceTracker/App.xaml
@@ -1,10 +1,10 @@
-﻿<Application x:Class="UntitledFinanceTracker.App"
+﻿<Application x:Class="UntitledFinanceTracker.Views.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:fa="http://schemas.fontawesome.io/icons/"
              xmlns:ctrl="http://filterdatagrid.control.com/2021"
-             xmlns:local="clr-namespace:UntitledFinanceTracker"
-             StartupUri="MainWindow.xaml"
+             xmlns:local="clr-namespace:UntitledFinanceTracker.Views"
+             StartupUri="Views/MainWindow.xaml"
     xmlns:theme="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2">
     <Application.Resources>
 
