--- a/UntitledFinanceTracker/Views/Settings.xaml
+++ b/UntitledFinanceTracker/Views/Settings.xaml
@@ -8,25 +8,17 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="55" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="140" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
-
-        <Border Background="#1A1A1A" Grid.ColumnSpan="2" Margin="10" />
-        <TextBlock Style="{StaticResource Title}" Grid.Row="0" Grid.ColumnSpan="2" Margin="15 0 0 0">Settings</TextBlock>
-
-        <ListView Style="{StaticResource Menu}" Grid.Row="1" x:Name="lvSettingsMenu" Margin="10 0 0 10" SelectionChanged="SettingsMenuSelectionChanged">
+            <ListView Style="{StaticResource Menu}" x:Name="lvSettingsMenu" Margin="10 10 0 10" SelectionChanged="SettingsMenuSelectionChanged">
             <ListViewItem Style="{StaticResource MenuItem}" x:Name="lviGeneral" Content="General"/>
             <ListViewItem Style="{StaticResource MenuItem}" x:Name="lviAccountTypes" Content="Account Types" />
             <ListViewItem Style="{StaticResource MenuItem}" x:Name="lviAccounts" Content="Accounts" />
             <ListViewItem Style="{StaticResource MenuItem}" x:Name="lviCategories" Content="Categories" />
         </ListView>
 
-        <Grid Grid.Column="1" Grid.Row="1" x:Name="SettingsPanel"></Grid>
+        <Grid Grid.Column="1" Grid.Row="1" x:Name="SettingsPanel" Margin="0 10 0 0"></Grid>
     </Grid>
 </UserControl>
