--- a/UntitledFinanceTracker/Views/Transactions.xaml
+++ b/UntitledFinanceTracker/Views/Transactions.xaml
@@ -11,20 +11,15 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="55" />
-            <RowDefinition Height="40" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <Border Background="#1A1A1A" Grid.ColumnSpan="2" Margin="10 10 10 5">
-            <TextBlock Style="{StaticResource Title}" Grid.Row="0" Margin="5 0 0 0">
-                Transactions
-            </TextBlock>
-        </Border>
-        <Button Style="{StaticResource btnAdd}" x:Name="btnAdd" Click="BtnAdd_Click" VerticalAlignment="Stretch" Margin="15">
-            Add Transaction
-        </Button>
-        
-        <StackPanel Grid.Row="1" Orientation="Horizontal">
+        <Grid Grid.Row="0" Margin="0 10 0 10">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="455" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+        <StackPanel Orientation="Horizontal">
             <ComboBox x:Name="cbYears" Template="{DynamicResource ComboBoxTemplate}" ItemsSource="{Binding}"
                       Margin="10 0 5 5" Width="65" SelectionChanged="cbYears_SelectionChanged" />
             <ComboBox x:Name="cbAccounts" Template="{DynamicResource ComboBoxTemplate}" ItemsSource="{Binding}"
@@ -52,8 +47,11 @@
                 </ComboBox.ItemTemplate>
             </ComboBox>
         </StackPanel>
+            <Button Style="{StaticResource btnAdd}" x:Name="btnAdd" Click="BtnAdd_Click"
+                VerticalAlignment="Stretch" HorizontalAlignment="Right" Grid.Column="1" Margin="5 0 5 5" Content="Add Transaction" />
+            </Grid>
 
-        <DataGrid x:Name="dgTransactions" Grid.Row="2" ItemsSource="{Binding Transactions}">
+        <DataGrid x:Name="dgTransactions" Grid.Row="1" ItemsSource="{Binding Transactions}">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="ID" Width="40" Binding="{Binding TransactionID}" Visibility="Hidden" />
                 <DataGridTextColumn Header="Date" Width="70" Binding="{Binding Date, StringFormat=yyyy-MM-dd}" />
