--- a/UntitledFinanceTracker/Views/EditAccountTypes.xaml
+++ b/UntitledFinanceTracker/Views/EditAccountTypes.xaml
@@ -16,11 +16,13 @@
         <StackPanel Orientation="Vertical">
             <StackPanel Style="{StaticResource spForm}">
                 <Label>Type</Label>
-                <TextBox x:Name="txtAccountType"></TextBox>
+                <TextBox x:Name="txtAccountType" TabIndex="0"></TextBox>
             </StackPanel>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <Button Style="{StaticResource btnUpdateFrm}" x:Name="btnEdit" Click="btnEdit_Click" >Update</Button>
-                <Button Style="{StaticResource btnCancelFrm}" x:Name="btnCancel" Click="btnCancel_Click" >Cancel</Button>
+                <Button Style="{StaticResource btnUpdateFrm}" x:Name="btnEdit" Click="btnEdit_Click"
+                        TabIndex="1" IsDefault="True">Update</Button>
+                <Button Style="{StaticResource btnCancelFrm}" x:Name="btnCancel" Click="btnCancel_Click"
+                        TabIndex="2" IsCancel="True">Cancel</Button>
             </StackPanel>
         </StackPanel>
     </Grid>
