--- a/UntitledFinanceTracker/Views/EditAccounts.xaml
+++ b/UntitledFinanceTracker/Views/EditAccounts.xaml
@@ -16,26 +16,28 @@
         <StackPanel Orientation="Vertical" Width="200" Margin="0 10 0 0">
             <StackPanel Style="{StaticResource spForm}">
                 <Label>Name</Label>
-                <TextBox x:Name="txtName"></TextBox>
+                <TextBox x:Name="txtName" TabIndex="0"></TextBox>
             </StackPanel>
             <StackPanel Style="{StaticResource spForm}">
                 <Label>Type</Label>
-                <ComboBox Template="{DynamicResource ComboBoxTemplate}" x:Name="cbAccountType"
+                <ComboBox Template="{DynamicResource ComboBoxTemplate}" x:Name="cbAccountType" TabIndex="1"
                         DisplayMemberPath = "AccountTypeName" SelectedValuePath = "AccountTypeID" />
             </StackPanel>
             <StackPanel Style="{StaticResource spForm}">
                 <Label>Starting Balance</Label>
-                <TextBox x:Name="txtBalance"></TextBox>
+                <TextBox x:Name="txtBalance" TabIndex="2"></TextBox>
             </StackPanel>
             <StackPanel Style="{StaticResource spForm}" Orientation="Horizontal" Margin="10 10 0 0"
                         HorizontalAlignment="Left" >
                 <Label>Status</Label>
-                <CheckBox x:Name="chkEnabled" IsChecked="True"
+                <CheckBox x:Name="chkEnabled" IsChecked="True" TabIndex="3"
                           VerticalAlignment="Center" Margin="5 0 0 0"></CheckBox>
             </StackPanel>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0 5 0 0">
-                <Button Style="{StaticResource btnUpdateFrm}" x:Name="btnEdit" Click="btnEdit_Click" >Update</Button>
-                <Button Style="{StaticResource btnCancelFrm}" x:Name="btnCancel" Click="btnCancel_Click" >Cancel</Button>
+                <Button Style="{StaticResource btnUpdateFrm}" x:Name="btnEdit" Click="btnEdit_Click"
+                        TabIndex="4" IsDefault="True">Update</Button>
+                <Button Style="{StaticResource btnCancelFrm}" x:Name="btnCancel" Click="btnCancel_Click"
+                        TabIndex="5" IsCancel="True">Cancel</Button>
             </StackPanel>
         </StackPanel>
     </Grid>
