--- a/UntitledFinanceTracker/Views/EditCategories.xaml
+++ b/UntitledFinanceTracker/Views/EditCategories.xaml
@@ -16,22 +16,24 @@
         <StackPanel Orientation="Vertical" Width="200" Margin="0 10 0 0">
             <StackPanel Style="{StaticResource spForm}">
                 <Label>Parent</Label>
-                <ComboBox Template="{DynamicResource ComboBoxTemplate}" x:Name="cbParent"
+                <ComboBox Template="{DynamicResource ComboBoxTemplate}" x:Name="cbParent" TabIndex="0"
                           DisplayMemberPath="CategoryName" SelectedValuePath="CategoryID" />
             </StackPanel>
             <StackPanel Style="{StaticResource spForm}">
                 <Label>Name</Label>
-                <TextBox x:Name="txtName"></TextBox>
+                <TextBox x:Name="txtName" TabIndex="1"></TextBox>
             </StackPanel>
             <StackPanel Style="{StaticResource spForm}" Orientation="Horizontal" Margin="10 0 0 0"
                         HorizontalAlignment="Left" >
                 <Label>Status</Label>
-                <CheckBox x:Name="chkEnabled" IsChecked="True"
+                <CheckBox x:Name="chkEnabled" IsChecked="True" TabIndex="2"
                           VerticalAlignment="Center" Margin="5 0 0 0"></CheckBox>
             </StackPanel>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0 5 0 0">
-                <Button Style="{StaticResource btnUpdateFrm}" x:Name="btnEdit" Click="btnEdit_Click" >Update</Button>
-                <Button Style="{StaticResource btnCancelFrm}" x:Name="btnCancel" Click="btnCancel_Click" >Cancel</Button>
+                <Button Style="{StaticResource btnUpdateFrm}" x:Name="btnEdit" Click="btnEdit_Click"
+                        TabIndex="3" IsDefault="True">Update</Button>
+                <Button Style="{StaticResource btnCancelFrm}" x:Name="btnCancel" Click="btnCancel_Click"
+                        TabIndex="4" IsCancel="True">Cancel</Button>
             </StackPanel>
         </StackPanel>
     </Grid>
