--- a/UntitledFinanceTracker/Views/SettingsAccountTypes.xaml
+++ b/UntitledFinanceTracker/Views/SettingsAccountTypes.xaml
@@ -14,11 +14,11 @@
         </Grid.RowDefinitions>
 
         <Border Background="#1A1A1A" Grid.ColumnSpan="2" Margin="10 0 10 10">
-            <TextBlock Style="{StaticResource Title}" Grid.Row="0" Grid.ColumnSpan="2" Margin="5 0 0 0">Account Types</TextBlock>
+            <TextBlock Style="{StaticResource Title}" Grid.Row="0" Grid.ColumnSpan="2"
+                       Margin="5 0 0 0">Account Types</TextBlock>
         </Border>
-        <Button Style="{StaticResource btnAdd}" x:Name="btnAdd" Click="btnAdd_Click" VerticalAlignment="Stretch">
-            Add Account Type
-        </Button>
+        <Button Style="{StaticResource btnAdd}" x:Name="btnAdd" Click="btnAdd_Click" VerticalAlignment="Stretch"
+                IsDefault="True">Add Account Type</Button>
 
         <DataGrid x:Name="dgAccountTypes" Grid.Row="1" ItemsSource="{Binding AccountTypes}">
             <DataGrid.Columns>
