text colour now changes based on category in transaction view

--- a/UntitledFinanceTracker/App.xaml
+++ b/UntitledFinanceTracker/App.xaml
@@ -97,7 +97,7 @@
                 <Style TargetType="ListViewItem">
                     <Setter Property="Height" Value="22" />
                     <Setter Property="Padding" Value="0 0 0 0" />
-                    <Setter Property="IsEnabled" Value="True" />
+                    <Setter Property="IsEnabled" Value="False" />
                 </Style>
             </Style.Resources>
         </Style>
