--- a/UntitledFinanceTracker/Views/Transactions.xaml
+++ b/UntitledFinanceTracker/Views/Transactions.xaml
@@ -3,11 +3,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:UntitledFinanceTracker.Views"
-             xmlns:ctrl="http://filterdatagrid.control.com/2021"
+             xmlns:local="clr-namespace:UntitledFinanceTracker.Models"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              Initialized="UserControl_Initialized">
+    <UserControl.Resources>
+        <local:ColourValueConverter x:Key="ColourValueConverter" />
+    </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="55" />
@@ -31,7 +33,7 @@
                 </ComboBox.ItemTemplate>
             </ComboBox>
             <ComboBox x:Name="cbCategories" Template="{DynamicResource ComboBoxTemplate}" ItemsSource="{Binding}"
-                      Margin="95 0 5 5" Width="90">
+                      Margin="85 0 5 5" Width="80">
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
                         <CheckBox IsChecked="{Binding Enabled}" Content="{Binding CategoryName}" Foreground="#ffffff" Click="ChkCategory_Click" />
@@ -39,7 +41,7 @@
                 </ComboBox.ItemTemplate>
             </ComboBox>
             <ComboBox x:Name="cbSubcategories" Template="{DynamicResource ComboBoxTemplate}" ItemsSource="{Binding}"
-                      Margin="5 0 5 5" Width="90">
+                      Margin="5 0 5 5" Width="80">
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
                         <CheckBox IsChecked="{Binding Enabled}" Content="{Binding CategoryName}" Foreground="#ffffff" Click="ChkSubcategory_Click" />
@@ -48,7 +50,7 @@
             </ComboBox>
         </StackPanel>
             <Button Style="{StaticResource btnAdd}" x:Name="btnAdd" Click="BtnAdd_Click" IsDefault="True"
-                VerticalAlignment="Stretch" HorizontalAlignment="Right" Grid.Column="1" Margin="5 0 5 5" Content="Add Transaction" />
+                VerticalAlignment="Stretch" HorizontalAlignment="Right" Grid.Column="1" Margin="5 0 10 5" Content="Add Transaction" />
             </Grid>
 
         <DataGrid x:Name="dgTransactions" Grid.Row="1" ItemsSource="{Binding Transactions}">
@@ -56,13 +58,19 @@
                 <DataGridTextColumn Header="ID" Width="40" Binding="{Binding TransactionID}" Visibility="Hidden" />
                 <DataGridTextColumn Header="Date" Width="70" Binding="{Binding Date, StringFormat=yyyy-MM-dd}" />
                 <DataGridTextColumn Header="AccountID" Width="40" Binding="{Binding AccountID}" Visibility="Hidden" />
-                <DataGridTextColumn Header="Account" Width="80" Binding="{Binding AccountName}" />
+                <DataGridTextColumn Header="Account" Width="70" Binding="{Binding AccountName}" />
                 <DataGridTextColumn Header="Amount" Width="90" Binding="{Binding Amount, StringFormat=C}"
-                                    CellStyle="{StaticResource dgCellRight}" HeaderStyle="{StaticResource dgRight}" />
+                                    CellStyle="{StaticResource dgCellRight}" HeaderStyle="{StaticResource dgRight}">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="{x:Type TextBlock}">
+                            <Setter Property="Foreground" Value="{Binding CategoryID, Converter={StaticResource ColourValueConverter}}"/>
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
                 <DataGridTextColumn Header="CategoryID" Width="40" Binding="{Binding CategoryID}" Visibility="Hidden" />
-                <DataGridTextColumn Header="Category" Width="100" Binding="{Binding CategoryName}" />
+                <DataGridTextColumn Header="Category" Width="90" Binding="{Binding CategoryName}" />
                 <DataGridTextColumn Header="SubcategoryID" Width="40" Binding="{Binding SubcategoryID}" Visibility="Hidden" />
-                <DataGridTextColumn Header="Subcategory" Width="100" Binding="{Binding SubcategoryName}" />
+                <DataGridTextColumn Header="Subcategory" Width="90" Binding="{Binding SubcategoryName}" />
                 <DataGridTextColumn Header="PayeeID" Width="40" Binding="{Binding PayeeID}" Visibility="Hidden" />
                 <DataGridTextColumn Header="Payee" Width="*" Binding="{Binding PayeeName}" />
                 <DataGridTemplateColumn Header="Action" Width="60" HeaderStyle="{StaticResource dgCenter}">
