--- a/UntitledFinanceTracker/Views/Dashboard.xaml
+++ b/UntitledFinanceTracker/Views/Dashboard.xaml
@@ -4,9 +4,29 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:UntitledFinanceTracker.Views"
+             xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-        <TextBlock Style="{StaticResource Title}">Dashboard</TextBlock>
-    </Grid>
+             d:DesignHeight="450" d:DesignWidth="800"
+             Initialized="UserControl_Initialized">
+    <UniformGrid Columns="2" Rows="2">
+        <DockPanel LastChildFill="True" Margin="10" Background="#212121">
+            <Label DockPanel.Dock="Top" HorizontalAlignment="Center" VerticalAlignment="Top">Weekly Balance</Label>
+            <lvc:CartesianChart x:Name="chrtBalance" Series="{Binding series}" Margin="0 -10 20 10" Padding="10">
+                <lvc:CartesianChart.AxisY>
+                    <lvc:Axis x:Name="chrtBalanceAxisY" LabelFormatter="{Binding Formatter}">
+                        <lvc:Axis.Separator>
+                            <lvc:Separator Stroke="#707070"/>
+                        </lvc:Axis.Separator>
+                    </lvc:Axis>
+                </lvc:CartesianChart.AxisY>
+                <lvc:CartesianChart.AxisX>
+                    <lvc:Axis x:Name="chrtBalanceAxisX" MinValue="1">
+                        <lvc:Axis.Separator>
+                            <lvc:Separator Stroke="#707070"/>
+                        </lvc:Axis.Separator>
+                    </lvc:Axis>
+                </lvc:CartesianChart.AxisX>
+            </lvc:CartesianChart>
+        </DockPanel>
+    </UniformGrid>
 </UserControl>
