updated running balance graph

--- a/UntitledFinanceTracker/Views/Dashboard.xaml
+++ b/UntitledFinanceTracker/Views/Dashboard.xaml
@@ -21,13 +21,13 @@
 
         <StackPanel Orientation="Horizontal" Grid.ColumnSpan="2" Margin="5 10 0 0">
             <Label Margin="5 0 5 0" Content="From" FontSize="11" />
-            <DatePicker x:Name="dtFrom" Width="105" />
+            <DatePicker x:Name="dtFrom" Width="105" SelectedDateChanged="dtFrom_SelectedDateChanged" />
             <Label Margin="5 0 5 0" Content="To" FontSize="11"  />
-            <DatePicker x:Name="dtTo" Width="105" />
+            <DatePicker x:Name="dtTo" Width="105" SelectedDateChanged="dtTo_SelectedDateChanged" />
         </StackPanel>
         
         <DockPanel Grid.Row="1" Grid.Column="0" LastChildFill="True" Margin="10" Background="#212121">
-            <Label DockPanel.Dock="Top" HorizontalAlignment="Center" VerticalAlignment="Top">Weekly Balance</Label>
+            <Label DockPanel.Dock="Top" HorizontalAlignment="Center" VerticalAlignment="Top">Balance Over Time</Label>
             <lvc:CartesianChart x:Name="chrtBalance" Series="{Binding series}" DisableAnimations="True" DataTooltip="{x:Null}"
                                 Margin="0 -10 20 20" Padding="10">
                 <lvc:CartesianChart.AxisY>
@@ -38,7 +38,7 @@
                     </lvc:Axis>
                 </lvc:CartesianChart.AxisY>
                 <lvc:CartesianChart.AxisX>
-                    <lvc:Axis x:Name="chrtBalanceAxisX" MinValue="1">
+                    <lvc:Axis x:Name="chrtBalanceAxisX">
                         <lvc:Axis.Separator>
                             <lvc:Separator Stroke="#707070"/>
                         </lvc:Axis.Separator>
