--- a/UntitledFinanceTracker/Views/Dashboard.xaml
+++ b/UntitledFinanceTracker/Views/Dashboard.xaml
@@ -26,9 +26,9 @@
             <DatePicker x:Name="dtTo" Width="105" SelectedDateChanged="dtTo_SelectedDateChanged" />
         </StackPanel>
         
-        <DockPanel Grid.Row="1" Grid.Column="0" LastChildFill="True" Margin="10" Background="#212121">
+        <DockPanel Grid.Row="1" Grid.Column="0" LastChildFill="True" Margin="10 10 5 5" Background="#212121">
             <Label DockPanel.Dock="Top" HorizontalAlignment="Center" VerticalAlignment="Top">Balance Over Time</Label>
-            <lvc:CartesianChart x:Name="chrtBalance" Series="{Binding series}" DisableAnimations="True" DataTooltip="{x:Null}"
+            <lvc:CartesianChart x:Name="chrtBalance" DisableAnimations="True" DataTooltip="{x:Null}"
                                 Margin="0 -10 20 20" Padding="10">
                 <lvc:CartesianChart.AxisY>
                     <lvc:Axis x:Name="chrtBalanceAxisY" LabelFormatter="{Binding Formatter}">
@@ -45,6 +45,44 @@
                     </lvc:Axis>
                 </lvc:CartesianChart.AxisX>
             </lvc:CartesianChart>
+        </DockPanel>
+        <DockPanel Grid.Row="2" Margin="10 5 5 10" Background="#212121">
+            <Label DockPanel.Dock="Top" HorizontalAlignment="Center" VerticalAlignment="Top">Incomes/Expenses over Time</Label>
+            <!--<lvc:CartesianChart x:Name="chrtIncExpOverTime" DisableAnimations="True" DataTooltip="{x:Null}"
+                                Margin="0 -10 20 20" Padding="10">
+                <lvc:CartesianChart.AxisY>
+                    <lvc:Axis x:Name="chrtIncExpOverTimeAxisY" LabelFormatter="{Binding Formatter}">
+                        <lvc:Axis.Separator>
+                            <lvc:Separator Stroke="#707070"/>
+                        </lvc:Axis.Separator>
+                    </lvc:Axis>
+                </lvc:CartesianChart.AxisY>
+                <lvc:CartesianChart.AxisX>
+                    <lvc:Axis x:Name="chrtIncExpOverTimeAxisX">
+                        <lvc:Axis.Separator>
+                            <lvc:Separator Stroke="#707070"/>
+                        </lvc:Axis.Separator>
+                    </lvc:Axis>
+                </lvc:CartesianChart.AxisX>
+            </lvc:CartesianChart>-->
+        </DockPanel>
+        <DockPanel Grid.Row="1" Grid.Column="2" Margin="5 10 10 5" Background="#212121">
+            <Label DockPanel.Dock="Top" HorizontalAlignment="Center" VerticalAlignment="Top">Expenses</Label>
+            <lvc:PieChart x:Name="chrtExpenses" InnerRadius="50" LegendLocation="None"
+                          Margin="20 0 0 20" Foreground="White">
+                <lvc:PieChart.Resources>    
+                    <Style TargetType="{x:Type lvc:PieSeries}">
+                        <Setter Property="Stroke" Value="#212121" />
+                        <Setter Property="StrokeThickness" Value="3" />
+                        <Setter Property="Foreground" Value="White" />
+                        <Setter Property="FontSize" Value="12" />
+                        <Setter Property="FontFamily" Value="Arial Black" />
+                    </Style>
+                    <Style TargetType="{x:Type lvc:DefaultTooltip}">
+                        <Setter Property="Background" Value="#99121212" />
+                    </Style>
+                </lvc:PieChart.Resources>
+            </lvc:PieChart>
         </DockPanel>
     </Grid>
 </UserControl>
